<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/description_bugdroid_icon"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/card"
            android:elevation="4dp"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_title"
                android:textAppearance="@android:style/TextAppearance.Material.Headline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_price"
                android:textAppearance="@android:style/TextAppearance.Material.Body2"
                android:textColor="?android:attr/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/item_description"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

        <Button
            android:id="@+id/purchase_button"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:text="@string/purchase"
            android:textColor="?android:attr/textColorPrimaryInverse" />

        <Button
            android:id="@+id/purchase_button_not_invalidated"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:text="@string/purchase_not_invalidated"
            android:textColor="?android:attr/textColorPrimaryInverse" />

        <TextView
            android:id="@+id/purchase_button_not_invalidated_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:gravity="end"
            android:text="@string/purchase_button_not_invalidated_description"
            android:textAlignment="gravity" />

        <TextView
            android:id="@+id/confirmation_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/purchase_done"
            android:textAppearance="@android:style/TextAppearance.Material.Body2"
            android:textColor="?android:attr/colorAccent"
            android:visibility="gone" />

        <TextView
            android:id="@+id/encrypted_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/purchase_done"
            android:textAppearance="@android:style/TextAppearance.Material.Body2"
            android:textColor="?android:attr/colorAccent"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>